--- a/src/components/RandomColor/RandomColor.css
+++ b/src/components/RandomColor/RandomColor.css
@@ -38,8 +38,6 @@
     background-color: #555;
 }
 
-
-
 h2 {
     color: #DDDDFF;
     font-size: 2rem;
@@ -57,6 +55,14 @@ h2 {
 }
 
 .saved-color-color {
-    margin: .1rem auto 2rem;
+    margin: .1rem auto .5rem;
 }
 
+.delete-color {
+    width: 100px;
+    outline: none;
+    border: .1rem solid #111;
+    color: #DDF;
+    background-color: #333;
+    margin-bottom: 1rem;
+}
