Basic addition of complementary and analogous color palettes

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+:root {
+    --foregroundColor: #FFFFFF;
+    --backgroundColor: #000000;
+}
+
 html {
     font-size: 10px;
     font-family: sans-serif;
