Added monotone, triadic, split, square, and tetradic color palettes. Added design tips section.

--- a/src/components/styles/ColorPalettes.css
+++ b/src/components/styles/ColorPalettes.css
@@ -7,3 +7,13 @@
 .colors-palette-color {
     margin: .5rem;
 }
+
+h3 {
+    justify-self: center;
+}
+
+.design-tips {
+    color: #DDDDFF;
+    font-size: 1.4rem;
+    justify-self: center;
+}
