--- a/src/components/styles/ColorPalettes.css
+++ b/src/components/styles/ColorPalettes.css
@@ -17,3 +17,9 @@ h3 {
     font-size: 1.4rem;
     justify-self: center;
 }
+
+.colors-complementary p {
+    font-size: 1.6rem;
+    text-align: center;
+    margin-bottom: 0;
+}
