--- a/src/components/ColorPalettes/ColorPalettes.css
+++ b/src/components/ColorPalettes/ColorPalettes.css
@@ -1,5 +1,5 @@
 .color-wheel-container {
-    padding: 3rem;
+    padding: 0;
     justify-items: center;
     text-align: center;
 }
@@ -31,4 +31,73 @@ h2 {
 
 .harmony-container {
     width: 100%;
+    justify-items: center;
+}
+
+
+.save-palette {
+    margin: 3rem auto 0;
+    width: 25rem;
+    line-height: 3;
+    outline: none;
+    border: .1rem solid #111;
+    color: #DDF;
+    background-color: #333;
+    display: block;
+}
+
+.save-palette:hover {
+    background-color: #555;
+}
+
+
+/* Saved Colors Display */
+
+.saved {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: .1rem solid #DDDDFF44;
+    border-radius: 0.5rem;
+    padding: .5rem;
+    margin: 0 1rem 2rem;
+    max-width: 100%;
+}
+
+.palette-title {
+    font-size: 1.5rem;
+    margin: .5rem .5rem 0;
+}
+
+.colors-mapping {
+    display: flex;
+    flex-flow: wrap;
+    justify-content: center;
+}
+
+.saved-display {
+    align-items: center;
+    text-align: center;
+    padding: 1rem;
+}
+
+.saved-code {
+    color: #DDDDFF;
+    font-size: 1.6rem;
+    margin: 0;
+}
+
+.saved-color {
+    margin: .1rem auto .1rem;
+}
+
+.delete {
+    width: 50%;
+    outline: none;
+    border: .1rem solid #111;
+    color: #DDF;
+    background-color: #333;
+    margin-bottom: 1rem;
+    margin-top: 0;
+    line-height: 2;
 }
