--- a/src/components/RandomColor/RandomColor.css
+++ b/src/components/RandomColor/RandomColor.css
@@ -48,3 +48,31 @@ h2 {
     flex-wrap: wrap;
     justify-content: center;
 }
+
+
+/* Saved Colors Display */
+.saved-display {
+    align-items: center;
+    text-align: center;
+    padding: 1rem;
+}
+
+.saved-code {
+    color: #DDDDFF;
+    font-size: 1.6rem;
+    margin-bottom: 0;
+}
+
+.saved-color {
+    margin: .1rem auto .1rem;
+}
+
+.delete {
+    width: 100px;
+    outline: none;
+    border: .1rem solid #111;
+    color: #DDF;
+    background-color: #333;
+    margin-bottom: 1rem;
+    margin-top: 0;
+}
