Set max width for random color display

--- a/src/components/RandomColor/RandomColor.css
+++ b/src/components/RandomColor/RandomColor.css
@@ -3,6 +3,12 @@
     text-align: center;
 }
 
+.color-container {
+    width: 100%;
+    max-width: 100rem;
+    justify-self: center;
+}
+
 .color-display {
     width: 100%;
     margin-bottom: 1rem;
